<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        android:background="@android:color/white"
        android:elevation="@dimen/toolbar_elevation"
        app:title="@string/about_title"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toTopOf="@id/bottom_nav">

        <LinearLayout
            android:id="@+id/tab_contents"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:background="@color/transparent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/cardview_default_radius"
                android:layout_gravity="center"
                android:text="@string/welcome_to_therapy_ai"
                android:textStyle="bold"
                android:textSize="@dimen/large_heading"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/top_bottom_margin"
                    android:layout_marginStart="@dimen/side_margin"
                    android:text="@string/how_to_use_header"
                    android:textStyle="bold"
                    android:textSize="@dimen/medium_heading"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/side_margin"
                    android:layout_marginEnd="@dimen/side_margin"
                    android:text="@string/how_to_use_description"
                    android:textSize="@dimen/normal_text"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/top_bottom_margin"
                    android:layout_marginStart="@dimen/side_margin"
                    android:text="@string/purpose_header"
                    android:textStyle="bold"
                    android:textSize="@dimen/medium_heading"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/side_margin"
                    android:layout_marginEnd="@dimen/side_margin"
                    android:text="@string/purpose_description"
                    android:textSize="@dimen/normal_text"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/top_bottom_margin"
                    android:layout_marginStart="@dimen/side_margin"
                    android:text="@string/liability_header"
                    android:layout_gravity=""
                    android:textStyle="bold"
                    android:textSize="@dimen/medium_heading"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/side_margin"
                    android:layout_marginEnd="@dimen/side_margin"
                    android:layout_marginBottom="@dimen/side_margin"
                    android:text="@string/liability_description"
                    android:textSize="@dimen/normal_text"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


    <cse340.finalproject.TabView
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/colorPrimary"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        app:menu="@menu/bottom_nav"/>

</androidx.constraintlayout.widget.ConstraintLayout>