<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">


    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        android:background="@android:color/white"
        android:elevation="@dimen/toolbar_elevation"
        app:title="@string/chat_title"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/messages"
        android:importantForAccessibility="no"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/top_bottom_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toTopOf="@+id/enter_message_layout"
        android:scrollbars="none"
        android:background="@color/transparent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/enter_message_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="@dimen/top_bottom_margin"
        app:layout_constraintBottom_toTopOf="@id/bottom_nav">

        <EditText
            android:id="@+id/message_box"
            android:layout_width="0dp"
            android:layout_height="@dimen/box_height"
            android:layout_marginStart="@dimen/side_margin"
            android:layout_marginEnd="@dimen/side_margin"
            android:layout_marginBottom="@dimen/top_bottom_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/microphone_btn"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/type_your_message"
            android:textColorHint="@color/colorPrimary"
            android:backgroundTint="@color/colorPrimary"
            android:padding="@dimen/top_bottom_margin"
            android:textColor="@android:color/black" />

        <ImageView
            android:id="@+id/microphone_btn"
            android:contentDescription="@string/microphone_for_text_to_speech"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginStart="@dimen/side_margin"
            android:layout_marginEnd="@dimen/side_margin"
            android:layout_marginBottom="@dimen/top_bottom_margin"
            app:layout_constraintEnd_toStartOf="@id/send_btn"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/microphone_button" />

        <ImageView
            android:id="@+id/send_btn"
            android:contentDescription="@string/send_message"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginStart="@dimen/side_margin"
            android:layout_marginEnd="@dimen/side_margin"
            android:layout_marginBottom="@dimen/top_bottom_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/send_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <cse340.finalproject.TabView
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/colorPrimary"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        app:menu="@menu/bottom_nav"/>

</androidx.constraintlayout.widget.ConstraintLayout>